--- a/k3s/deployment.yml
+++ b/k3s/deployment.yml
@@ -68,7 +68,7 @@ spec:
         - name: app-logs
           mountPath: /app/logs
         - name: shared-logs
-          mountPath: /var/log/app
+          mountPath: /tmp/log/app
       
       # ========== Promtail (로그 수집) ==========
       - name: promtail
@@ -82,7 +82,7 @@ spec:
         - name: promtail-config
           mountPath: /etc/promtail
         - name: shared-logs
-          mountPath: /tmp/log/app-logs
+          mountPath: /tmp/log/app
           readOnly: true
         - name: varlog
           mountPath: /var/log
@@ -119,7 +119,7 @@ spec:
             cpu: "100m"
         volumeMounts:
         - name: shared-logs
-          mountPath: /var/log/app
+          mountPath: /tmp/log/app
           readOnly: true
       
       volumes:
