--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
-# SonarQube 설정 - Recommend Service (Python)
+# SonarCloud 설정 - Recommend Service (Python)
 
-sonar.host.url=http://13.124.109.82:9000
-sonar.projectKey=recommend-service
+sonar.host.url=https://sonarcloud.io
+sonar.organization=your-organization  # SonarCloud 조직명
+sonar.projectKey=your-org_recommend-service  # SonarCloud 프로젝트 키
 sonar.projectName=Recommend Service (Python/Flask)
 sonar.projectVersion=1.0
 
