--- a/k3s/deployment.yml
+++ b/k3s/deployment.yml
@@ -22,7 +22,10 @@ spec:
         app: recommend-service
         version: v1
     spec:
+      imagePullSecrets:
+      - name: registry-secret
       containers:
+      
       # ========== 메인 애플리케이션 ==========
       - name: app
         image: helena73/recommend-service:latest
@@ -177,3 +180,38 @@ data:
   FLASK_ENV: "production"
   LOG_LEVEL: "INFO"
   PYTHONUNBUFFERED: "1"
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: promtail-config
+  namespace: default
+data:
+  promtail-config.yaml: |
+    server:
+      http_listen_port: 9080
+      grpc_listen_port: 0
+
+    positions:
+      filename: /tmp/positions.yaml
+
+    clients:
+      - url: http://loki-gateway.default.svc.cluster.local/loki/api/v1/push # Loki 주소 확인 필요!
+
+    scrape_configs:
+    - job_name: system
+      static_configs:
+      - targets:
+          - localhost
+        labels:
+          job: varlogs
+          __path__: /var/log/*log
+
+    - job_name: app-logs
+      static_configs:
+      - targets:
+          - localhost
+        labels:
+          job: recommend-service
+          __path__: /tmp/log/app/*.log
